RESOLVED FIXED41766
Terminate QtWebProcess on exit
https://bugs.webkit.org/show_bug.cgi?id=41766
Summary Terminate QtWebProcess on exit
Zoltan Horvath
Reported 2010-07-07 07:10:16 PDT
Call WKPageTerminate to terminate QtWebProcess on exit.
Attachments
proposed patch (971 bytes, patch)
2010-07-07 07:13 PDT, Zoltan Horvath
no flags
Zoltan Horvath
Comment 1 2010-07-07 07:13:28 PDT
Created attachment 60729 [details] proposed patch
WebKit Commit Bot
Comment 2 2010-07-07 22:45:48 PDT
Comment on attachment 60729 [details] proposed patch Clearing flags on attachment: 60729 Committed r62760: <http://trac.webkit.org/changeset/62760>
WebKit Commit Bot
Comment 3 2010-07-07 22:45:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.