2010-07-07  Zoltan Horvath  <zoltan@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Terminate QtWebProcess on exit
        https://bugs.webkit.org/show_bug.cgi?id=41766

        Call WKPageTerminate to terminate QtWebProcess on exit.

        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPage::~QWKPage):

git-svn-id: svn://svn.chromium.org/blink/trunk@62760 bbb929c8-8fbe-4397-9dbb-9b2b20218538