third_party/WebKit/WebKit2/UIProcess/API/qt/qwkpage.cpp
@@ -229,6 +229,7 @@ QWKPage::QWKPage(WKPageNamespaceRef namespaceRef)
 QWKPage::~QWKPage()
 {
     delete d;
+    WKPageTerminate(pageRef());
 }
 
 void QWKPage::timerEvent(QTimerEvent* ev)
